# crewai-software-curriculum-dev

./: README.md  pyproject.toml
src/curriculum_crew/: crew.py  main.py
src/curriculum_crew/config/: agents.yaml  tasks.yaml
